# astro_project

./: .gitignore  Dockerfile  dbt-requirements.txt  docker-compose.override.yml  hello.py  pyproject.toml  requirements.txt
dags/: example_dbt_cosmos.py  hello_world.py  my_astronauts_dag.py  yahoo_finance_pipeline_dag.py
dbt/jaffle_shop/: .user.yml  dbt_project.yml  profiles.yml
dbt/jaffle_shop/models/: tpch_sources.yml
dbt/yahoo_finance_dbt/: dbt_project.yml  profiles.yml
dbt/yahoo_finance_dbt/models/: sources.yml
dbt/yahoo_finance_dbt/models/marts/: daily_stock_summary.sql  daily_stock_summary.yml  schema.yml
dbt/yahoo_finance_dbt/models/staging/: schema.yml  stg_yahoo_price_history.sql  stg_yahoo_price_history.yml
include/: constants.py  profiles.py  yfinance_loader.py
